--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjth1e3+sTxkt0jLjPy/v2",
+      "authorship_tag": "ABX9TyNUau+2WoH8INUy7UaXXzuj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3172,6 +3172,7 @@
     {
       "cell_type": "code",
       "source": [
+        "'''\n",
         "def gama(quality):\n",
         "    if quality <= 3:\n",
         "        return 'Baja'\n",
@@ -3180,7 +3181,10 @@
         "    elif quality <= 8:\n",
         "        return 'Alta'\n",
         "    else:\n",
-        "        return 'Superior'"
+        "        return 'Superior'\n",
+        "\n",
+        "df['gama'] = df['quality'].apply(gama)\n",
+        "'''"
       ],
       "metadata": {
         "id": "gJoIdCW1bdE5"
@@ -3191,7 +3195,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#df['gama'] = df['quality'].apply(gama)\n",
         "#df['gama'] = df['quality'].apply(lambda x: 'Baja' if x <= 3 else ('Media' if x <= 6 else ('Alta' if x <= 8 else 'Superior')))\n",
         "#df['gama'] = df.quality.apply(lambda x: 'Baja' if x <= 3 else ('Media' if x <= 6 else ('Alta' if x <= 8 else 'Superior')))\n",
         "rangos = [\"Baja\", \"Media\", \"Alta\", \"Superior\"]\n",
