--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwbnKSJroYx/4r3S6lpw7x",
+      "authorship_tag": "ABX9TyMQC+IR4tCDKBK679tQz3HD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2759,7 +2759,8 @@
       "source": [
         "#df.pivot_table(df, index=['type'], aggfunc='mean').round(2)\n",
         "\n",
-        "pivot_df = df.pivot_table(index=['type','quality'], aggfunc='size')\n",
+        "#pivot_df = df.pivot_table(index=['type','quality'], aggfunc='size')\n",
+        "pivot_df = df.pivot_table(index='type',columns='quality', aggfunc='size')\n",
         "#pivot_df = df.pivot_table(index=['type', 'quality'], aggfunc='size').reset_index(name='count')\n",
         "\n",
         "print(pivot_df)"
@@ -2769,29 +2770,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Va6xaZdgR4iy",
-        "outputId": "cb190dc1-f708-4ea7-8b67-5be90705c420"
+        "outputId": "62f2f875-8ecd-417a-9e20-a5c23d8d27d4"
       },
-      "execution_count": 32,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "type   quality\n",
-            "red    3            10\n",
-            "       4            53\n",
-            "       5           681\n",
-            "       6           638\n",
-            "       7           199\n",
-            "       8            18\n",
-            "white  3            20\n",
-            "       4           163\n",
-            "       5          1457\n",
-            "       6          2198\n",
-            "       7           880\n",
-            "       8           175\n",
-            "       9             5\n",
-            "dtype: int64\n"
+            "quality     3      4       5       6      7      8    9\n",
+            "type                                                   \n",
+            "red      10.0   53.0   681.0   638.0  199.0   18.0  NaN\n",
+            "white    20.0  163.0  1457.0  2198.0  880.0  175.0  5.0\n"
           ]
         }
       ]
@@ -3586,40 +3576,32 @@
     {
       "cell_type": "code",
       "source": [
-        "df.pivot_table(index='type', columns='gama', aggfunc='size')\n",
-        "#df.pivot_table(index='type', columns='gama', aggfunc='size', margins=True, margins_name='Total')\n",
-        "#df.gama.value_counts()"
+        "pd.pivot_table(df, index='type', columns='gama', values='quality', aggfunc='count', margins=True, margins_name=\"TOTAL\", observed=False)\n",
+        "#df.pivot_table(index='type', columns='gama', aggfunc='size')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 198
+          "height": 175
         },
         "id": "zMzZhYHzcCiM",
-        "outputId": "06f51486-75c5-4c49-8138-e47a7cab15f3"
+        "outputId": "0be536e8-ec21-4ee9-cf54-bce74eaa93fa"
       },
-      "execution_count": 29,
+      "execution_count": 50,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-29-bdcf9990c4d5>:1: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
-            "  df.pivot_table(index='type', columns='gama', aggfunc='size')\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "gama   Baja  Media  Alta  Superior\n",
-              "type                              \n",
-              "red      10   1372   217         0\n",
-              "white    20   3818  1055         5"
+              "gama   Baja  Media  Alta  Superior  TOTAL\n",
+              "type                                     \n",
+              "red      10   1372   217         0   1599\n",
+              "white    20   3818  1055         5   4898\n",
+              "TOTAL    30   5190  1272         5   6497"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b41e1b78-6c3b-4cff-a66d-5146eccf23c6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-449f7d46-7002-40aa-bc7a-bcdb320e8238\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3642,9 +3624,11 @@
               "      <th>Media</th>\n",
               "      <th>Alta</th>\n",
               "      <th>Superior</th>\n",
+              "      <th>TOTAL</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>type</th>\n",
+              "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
@@ -3658,6 +3642,7 @@
               "      <td>1372</td>\n",
               "      <td>217</td>\n",
               "      <td>0</td>\n",
+              "      <td>1599</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>white</th>\n",
@@ -3665,6 +3650,15 @@
               "      <td>3818</td>\n",
               "      <td>1055</td>\n",
               "      <td>5</td>\n",
+              "      <td>4898</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>TOTAL</th>\n",
+              "      <td>30</td>\n",
+              "      <td>5190</td>\n",
+              "      <td>1272</td>\n",
+              "      <td>5</td>\n",
+              "      <td>6497</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -3672,7 +3666,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b41e1b78-6c3b-4cff-a66d-5146eccf23c6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-449f7d46-7002-40aa-bc7a-bcdb320e8238')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3724,12 +3718,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b41e1b78-6c3b-4cff-a66d-5146eccf23c6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-449f7d46-7002-40aa-bc7a-bcdb320e8238 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b41e1b78-6c3b-4cff-a66d-5146eccf23c6');\n",
+              "        const element = document.querySelector('#df-449f7d46-7002-40aa-bc7a-bcdb320e8238');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3749,8 +3743,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e42a8f28-652c-4bca-b6b7-7af8edca06e7\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e42a8f28-652c-4bca-b6b7-7af8edca06e7')\"\n",
+              "<div id=\"df-de565e13-4fa1-4284-9291-2b8fdf82b38c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-de565e13-4fa1-4284-9291-2b8fdf82b38c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3869,7 +3863,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e42a8f28-652c-4bca-b6b7-7af8edca06e7 button');\n",
+              "        document.querySelector('#df-de565e13-4fa1-4284-9291-2b8fdf82b38c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -3881,11 +3875,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"#df\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"type\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"white\",\n          \"red\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Baja\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 7,\n        \"min\": 10,\n        \"max\": 20,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          20,\n          10\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Media\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1729,\n        \"min\": 1372,\n        \"max\": 3818,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          3818,\n          1372\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Alta\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 592,\n        \"min\": 217,\n        \"max\": 1055,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          1055,\n          217\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Superior\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3,\n        \"min\": 0,\n        \"max\": 5,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          5,\n          0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"#df\",\n  \"rows\": 3,\n  \"fields\": [\n    {\n      \"column\": \"type\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"red\",\n          \"white\",\n          \"TOTAL\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Baja\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 10,\n        \"min\": 10,\n        \"max\": 30,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          10,\n          20,\n          30\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Media\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1934,\n        \"min\": 1372,\n        \"max\": 5190,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          1372,\n          3818,\n          5190\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Alta\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 557,\n        \"min\": 217,\n        \"max\": 1272,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          217,\n          1055,\n          1272\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Superior\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2,\n        \"min\": 0,\n        \"max\": 5,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          5,\n          0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TOTAL\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2497,\n        \"min\": 1599,\n        \"max\": 6497,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          1599,\n          4898\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 50
         }
       ]
     },
